--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         test-name: python manage.py test mi_app.tests
         setup-command: sudo -H pip3 install pytest
-        command: pytest
+        command: python manage.py test mi_app.tests
         timeout: 10
     - name: Autograding Reporter
       uses: education/autograding-grading-reporter@v1
